--- a/index.html
+++ b/index.html
@@ -186,6 +186,24 @@
         </section>
 
 
+        <!-- Modal 4-->
+<div id="plant-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 justify-center items-center z-50">
+  <div class="bg-white w-11/12 md:w-1/2 lg:w-1/3 rounded-lg shadow-lg p-5 relative">
+    
+    <!-- Close Button -->
+    <button onclick="closeModal()" 
+            class="absolute top-2 right-2 text-gray-600 hover:text-black text-xl">
+      ✖
+    </button>
+
+    <img id="modal-image" src="" alt="" class="w-full h-48 object-cover rounded mb-4">
+    <h2 id="modal-title" class="text-xl font-bold mb-2">Title</h2>
+    <p id="modal-description" class="text-sm text-gray-700 mb-3">Description here...</p>
+    <p id="modal-category" class="text-sm text-green-700 mb-1">Category: </p>
+    <p id="modal-price" class="text-lg font-bold text-gray-900">৳ </p>
+  </div>
+</div>
+
 
     <!-- js -->
      <script src="./js/script.js"></script>
