--- a/index.html
+++ b/index.html
@@ -101,15 +101,21 @@
                 <div class="w-full md:w-1/6 mt-4 md:mt-0">
                     <div class="bg-white p-4 rounded-lg shadow">
                         <h2 class="text-[#000000] text-xl font-bold mb-4 text-center md:text-left">Your Cart</h2>
-                        <p class="text-sm text-gray-600 text-center py-8">Your cart is empty</p>
+                         <div id="cart-items" class="text-sm text-gray-700"></div>
                         <div class="mt-4 border-t pt-4">
                             <div class="flex justify-between mb-2">
-                                <span>Total:</span>
-                                <span class="font-bold">৳ 0</span>
+                                <span class="font-bold">Total:</span>
+                                <span id="cart-total" class="font-bold">৳ 0</span>
                             </div>
                         </div>
+                        <!-- <h2 class="text-[#000000] text-xl font-bold mb-4 text-center md:text-left">Your Cart</h2>
+                        <div id="cart-items"></div>
+                        <div id="cart-total">Total: ৳ 0</div> -->
+
                     </div>
                 </div>
+
+                </div> 
 
             </div>
         </section>
